--- a/Project.ipynb
+++ b/Project.ipynb
@@ -1576,7 +1576,7 @@
     "    random_forest.fit(X[train], Y[train])\n",
     "    random_forest_scores.append(random_forest.score(X[test], Y[test]))\n",
     "\n",
-    "print('Random Forest accuracy: %.3f (%.3f)' % (mean(random_forest_scores), std(random_forest_scores)))"
+    "print('Random Forest mean accuracy: %.3f (%.3f)' % (mean(random_forest_scores), std(random_forest_scores)))"
    ]
   },
   {
@@ -1609,7 +1609,7 @@
     "    knn.fit(X[train], Y[train])\n",
     "    knn_scores.append(knn.score(X[test], Y[test]))\n",
     "\n",
-    "print('KNN accuracy: %.3f (%.3f)' % (mean(knn_scores), std(knn_scores)))"
+    "print('KNN mean accuracy: %.3f (%.3f)' % (mean(knn_scores), std(knn_scores)))"
    ]
   },
   {
