--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[10 rows x 33 columns]"
       ]
      },
-     "execution_count": 331,
+     "execution_count": 357,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "(569, 33)"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "Name: diagnosis, dtype: int64"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 335,
+     "execution_count": 361,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 362,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
        "Name: diagnosis, dtype: int64"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 366,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
        "[8 rows x 31 columns]"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1386,16 +1386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2a38e270280>"
+       "<seaborn.axisgrid.PairGrid at 0x2a3917c9f10>"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -1434,7 +1434,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1522,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,14 +1555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest accuracy: 0.965 (0.016)\n"
+      "Random Forest mean accuracy: 0.965 (0.016)\n"
      ]
     }
    ],
@@ -1588,14 +1588,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNN accuracy: 0.970 (0.018)\n"
+      "KNN mean accuracy: 0.970 (0.018)\n"
      ]
     }
    ],
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1649,7 @@
        "KNeighborsClassifier(weights='distance')"
       ]
      },
-     "execution_count": 352,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
